--- a/CinemaBookingSystem/Views/Screenings/Details.cshtml
+++ b/CinemaBookingSystem/Views/Screenings/Details.cshtml
@@ -1,13 +1,13 @@
 ﻿@model CinemaBookingSystem.Models.Screening
 
 @{
-    ViewData["Title"] = "Details";
+    ViewData["Title"] = "Tickets";
 }
 
-<h2>Details</h2>
+<h2>Buy tickets</h2>
 
 <div>
-    <h4>Screening</h4>
+    <h4>Movie</h4>
     <hr />
     <dl class="dl-horizontal">
         <dt>
@@ -25,5 +25,5 @@
     </dl>
 </div>
 <div>
-    <a asp-action="Index">Back to List</a>
+    <a asp-action="Index">Back to Movies</a>
 </div>
