--- a/CinemaBookingSystem/Views/Screenings/Index.cshtml
+++ b/CinemaBookingSystem/Views/Screenings/Index.cshtml
@@ -13,7 +13,7 @@
 				@Html.DisplayNameFor(model => model.Title)
 			</th>
 			<th>
-				@Html.DisplayNameFor(model => model.Time)
+				Start time
 			</th>
 			<th>
 				@Html.DisplayNameFor(model => model.Auditorium)
