--- a/CinemaBookingSystem/Views/Screenings/Details.cshtml
+++ b/CinemaBookingSystem/Views/Screenings/Details.cshtml
@@ -9,20 +9,29 @@
 <div>
     <h4>Movie</h4>
     <hr />
-    <dl class="dl-horizontal">
-        <dt>
-            @Html.DisplayNameFor(model => model.Title)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Title)
-        </dd>
-        <dt>
-            @Html.DisplayNameFor(model => model.Time)
-        </dt>
-        <dd>
-            @Html.DisplayFor(model => model.Time)
-        </dd>
-    </dl>
+	<dl class="dl-horizontal">
+		<dt>
+			@Html.DisplayNameFor(model => model.Title)
+		</dt>
+		<dd>
+			@Html.DisplayFor(model => model.Title)
+		</dd>
+		<dt>
+			@Html.DisplayNameFor(model => model.Time)
+		</dt>
+		<dd>
+			@Html.DisplayFor(model => model.Time)
+		</dd>
+		<dt>
+			@Html.DisplayNameFor(model => model.Description)
+		</dt>
+		<dd>
+			@Html.DisplayFor(model => model.Description)
+		</dd>
+	</dl>
+</div>
+<div>
+	<p>Choose tickets:</p>
 </div>
 <div>
     <a asp-action="Index">Back to Movies</a>
