--- a/CinemaBookingSystem/Views/Screenings/Details.cshtml
+++ b/CinemaBookingSystem/Views/Screenings/Details.cshtml
@@ -7,32 +7,36 @@
 <h2>Buy tickets</h2>
 
 <div>
-    <h4>Movie</h4>
     <hr />
-	<dl class="dl-horizontal">
-		<dt>
-			@Html.DisplayNameFor(model => model.Title)
-		</dt>
-		<dd>
-			@Html.DisplayFor(model => model.Title)
-		</dd>
-		<dt>
-			@Html.DisplayNameFor(model => model.Time)
-		</dt>
-		<dd>
-			@Html.DisplayFor(model => model.Time)
-		</dd>
-		<dt>
-			@Html.DisplayNameFor(model => model.Description)
-		</dt>
-		<dd>
-			@Html.DisplayFor(model => model.Description)
-		</dd>
-	</dl>
+	<div class="bookTicketImg">
+		<img src="@Html.DisplayFor(model => @model.ImageUrl)" />
+	</div>
+	<div class="detailsText">
+		<dl>
+			<dt>
+				@Html.DisplayNameFor(model => model.Title)
+			</dt>
+			<dd>
+				@Html.DisplayFor(model => model.Title)
+			</dd>
+			<dt>
+				@Html.DisplayNameFor(model => model.Time)
+			</dt>
+			<dd>
+				@Html.DisplayFor(model => model.Time)
+			</dd>
+			<dt>
+				@Html.DisplayNameFor(model => model.Description)
+			</dt>
+			<dd>
+				@Html.DisplayFor(model => model.Description)
+			</dd>
+		</dl>
+	</div>
 </div>
-<div>
-	<p>Choose tickets:</p>
-</div>
-<div>
+
+<hr />
+<div class="detailsLinks">
     <a asp-action="Index">Back to Movies</a>
 </div>
+<hr />
