Added another media query

--- a/CinemaBookingSystem/Views/Screenings/Details.cshtml
+++ b/CinemaBookingSystem/Views/Screenings/Details.cshtml
@@ -6,8 +6,7 @@
 
 <h2>Buy tickets</h2>
 
-<div>
-    <hr />
+<div class="details">
 	<div class="bookTicketImg">
 		<img src="@Html.DisplayFor(model => @model.ImageUrl)" />
 	</div>
