--- a/CinemaBookingSystem/Views/Screenings/Details.cshtml
+++ b/CinemaBookingSystem/Views/Screenings/Details.cshtml
@@ -35,7 +35,7 @@
 		<div>
 			<p>Choose tickets:</p>
 
-			<form action="/action_page.php">
+			<form action="BookingConfirmation">
 				<input type="number" name="quantity" min="1" max="12">
 				<input type="submit" value="Buy">
 			</form>
