Fixing backend validation

--- a/CinemaBookingSystem/Views/Home/About.cshtml
+++ b/CinemaBookingSystem/Views/Home/About.cshtml
@@ -1,7 +1,24 @@
 ﻿@{
-    ViewData["Title"] = "About";
+	ViewData["Title"] = "About";
 }
-<h2>@ViewData["Title"]</h2>
-<h3>@ViewData["Message"]</h3>
+<h2>About Berras Cinema</h2>
 
-<p>Use this area to provide additional information.</p>
+<h4>Berras Cinema is run by Berra, a driven and ambitious man who've run the cinema scince he was 12 years old.</h4>
+
+
+<div>
+	<img src="~/images/Berra.jpg" class="img-circle" alt="A picture of Berra" width="500">
+</div>
+
+<div class="berra-quote">
+	<blockquote>
+		<p>"I like motion pictures"</p>
+		<footer>Berra, 1934</footer>
+	</blockquote>
+</div>
+
+<hr />
+<p>Trailer for Berras favoirite movie: </p>
+<div class="embed-responsive embed-responsive-16by9">
+	<iframe class="embed-responsive-item" src="https://www.youtube.com/embed/q3fx6TugN7g"></iframe>
+</div>
