--- a/CinemaBookingSystem/Views/Home/Index.cshtml
+++ b/CinemaBookingSystem/Views/Home/Index.cshtml
@@ -1,11 +1,15 @@
 ﻿@{
     ViewData["Title"] = "Home Page";
 }
+<body>
 
-<div class="jumbotron">
-	<h1>Welcome to Berras Cinema!</h1>
-</div>
+	<div class="jumbotron container">
+		<h1>Welcome to Berras Cinema!</h1>
+	</div>
 
-<div>
-	<p>Buy Tickets here</p>
-</div>
+	<div>
+		<p>Buy Tickets here</p>
+	</div>
+
+</body>
+
