--- a/CinemaBookingSystem/Views/Screenings/BookingConfirmation.cshtml
+++ b/CinemaBookingSystem/Views/Screenings/BookingConfirmation.cshtml
@@ -39,6 +39,7 @@
 		</dl>
 		<hr />
 		<h3>Enjoy your movie!</h3>
+		@Html.ValidationSummary(true, "", new { @class = "text-danger" });
 	</div>
 </div>
 
