--- a/CinemaBookingSystem/Views/Screenings/Details.cshtml
+++ b/CinemaBookingSystem/Views/Screenings/Details.cshtml
@@ -1,10 +1,12 @@
 ﻿@model CinemaBookingSystem.Models.Screening
 
 @{
-    ViewData["Title"] = "Tickets";
+	ViewData["Title"] = "Tickets";
 }
 
 <h2>Buy tickets</h2>
+
+@Html.ValidationSummary(true, "", new { @class = "text-danger" });
 
 <div class="details">
 	<div class="bookTicketImg">
@@ -32,18 +34,16 @@
 				<hr />
 			</dd>
 		</dl>
-		<div>
-			<p>Choose number of tickets:</p>
+		<div class="form-group">
+			<label for="BookingConfirmation">Choose number of tickets:</label>
 
-			<form asp-action="BookingConfirmation" asp-route-id="@Model.Id" asp-controller = "Screenings">
-				<input type="number" name="numberOfTickets" min="1" max="12" value="1"/>
-				<input type="submit" value="Buy tickets"/>
+			<form asp-action="BookingConfirmation" asp-route-id="@Model.Id" asp-controller="Screenings">
+				<input id="focusedInput" type="number" name="numberOfTickets" min="1" max="12" value="1" />
+				<input type="submit" value="Buy tickets" class="btn btn-primary" />
 			</form>
-
 		</div>
 	</div>
 </div>
-
 <hr />
 <div class="detailsLinks">
 	<a asp-action="Index">Back to Movies</a>
