--- a/CinemaBookingSystem/wwwroot/css/site.css
+++ b/CinemaBookingSystem/wwwroot/css/site.css
@@ -14,16 +14,6 @@
 	padding-right: 15px;
 }
 
-/* Carousel */
-.carousel-caption p {
-	font-size: 20px;
-	line-height: 1.4;
-}
-
-/* Make .svg files in the carousel display properly in older browsers */
-.carousel-inner .item img[src$=".svg"] {
-	width: 100%;
-}
 
 /* QR code generator */
 #qrCode {
@@ -55,6 +45,14 @@
 	height: 350px;
 	margin-right: 10px;
 }
+
+.berra-quote {
+	position: relative;
+	bottom: 280px;
+	left: 550px;
+
+}
+
 
 /* Hide/rearrange for smaller screens */
 @media screen and (max-width: 767px) {
