--- a/CinemaBookingSystem/Views/Home/About.cshtml
+++ b/CinemaBookingSystem/Views/Home/About.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
 	ViewData["Title"] = "About";
 }
-<h2>About Berras Cinema</h2>
+<h2>About Berra's Cinema</h2>
 
-<h4>Berras Cinema is run by Berra, a driven and ambitious man who've run the cinema scince he was 12 years old.</h4>
+<h4>Berra's Cinema is run by Berra, a driven and ambitious man who've run the cinema scince he was 12 years old.</h4>
 
 
 <div>
