--- a/CinemaBookingSystem/Views/Shared/_Layout.cshtml
+++ b/CinemaBookingSystem/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="utf-8" />
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>@ViewData["Title"] - Berras Cinema</title>
+	<title>@ViewData["Title"] - Berra's Cinema</title>
 	<link href="https://fonts.googleapis.com/css?family=Limelight" rel="stylesheet">
 
 	<environment include="Development">
@@ -28,7 +28,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Berras Cinema</a>
+                <a asp-area="" asp-controller="Home" asp-action="Index" class="navbar-brand">Berra's Cinema</a>
             </div>
             <div class="navbar-collapse collapse">
 				<ul class="nav navbar-nav">
